# distributed-cloud-storage

./: .gitignore  CMakeLists.txt  config.json
common/: CMakeLists.txt
common/include/: BaseHandler.cc  BaseHandler.h  FileStorage.h  JJJ.txt  LocalFileStorage.cc  LocalFileStorage.h  RemoteFileStorage.cc  RemoteFileStorage.h  test_remote_storage  test_remote_storage.cpp
datanode/: CMakeLists.txt
datanode/src/: DataNode.cc  DataNode.h  DataNodeHttpHandler.cc  DataNodeHttpHandler.h  DataNodeServer.cc  DataNodeServer.h  MasterClient.cc  MasterClient.h  datanode.cc  test_datanode
master/: CMakeLists.txt
master/src/: DataNodeInfo.h  FileUploadContext.cc  FileUploadContext.h  HeartbeatHandler.cc  HeartbeatHandler.h  HttpUploadHandler.cc  HttpUploadHandler.h  LocalFileStorage.h  MasterHttpHandler.cc  MasterHttpHandler.h  NodeManager.cc  NodeManager.h  RegisterNodeHandler.cc  RegisterNodeHandler.h  RemoteFileStorage.h  StorageNode.h  http_upload.cc  test_all.cc
web/html/: index.html  share.html
